add scss from other project\

--- a/app/index.html
+++ b/app/index.html
@@ -5,28 +5,26 @@
   <meta charset="UTF-8">
   <title></title>
   <!--build:css css/styles.min.css-->
-  <link rel="stylesheet" href="css/styles.css">
-  <link rel="stylesheet" href="css/print.css">
+  <!--<link rel="stylesheet" href="css/styles.css">-->
+  <link rel="stylesheet" href="css/menu.css">
   <!--endbuild-->
 </head>
 
 <body>
-   <div>
-     my hobby
-     <ul>
-       <li><a>Drink coffee</a></li>
-       <li><a>Read a book</a></li>
-        <li><a>Running</a></li>
-     </ul>
 
-     <div class="box"></div>
+    <ul class="twitter" role="navigation">
+       
+        <li><i class="fa fa-home"></i>Home</li>
+        <li><i class="fa fa-bell-o"></i>Notifications</li>
+        <li><i class="fa fa-envelope-o"></i>Messages</li>
+        <li><i class="fa fa-twitter"></i></li>
+        <li><form><input placeholder="search twitter"/><i class="fa fa-search"></i></form></li>
+        <li><i class="fa fa-user-circle-o"></i></li>
+        <li><button>tweet</button></li>
+        <li class="twitter__bird"> bird</li>
+      </ul>
+  
 
-     <div class="alert">Notice</div>
-<div class="alert-success">Success</div>
-<div class="alert-warning">Warning</div>
-<div class="alert-error">Error</div>
-
-   </div>
   <!--build:js js/main.min.js -->
   <script src="js/lib/a-library.js"></script>
   <script src="js/lib/another-library.js"></script>
